--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@ body {
     background-color: white;
     border-radius: 10px;
     box-shadow: 0px 10px 30px;
-    height: calc(100vh-100px);
+    height: calc(100vh - 100px);
     padding: 10px;
 
     .user-card {
@@ -51,7 +51,7 @@ body {
     background-color: white;
     border-radius: 10px;
     box-shadow: 0px 10px 30px;
-    height: calc(100vh-100px);
+    height: calc(100vh - 100px);
     position: relative;
     overflow: hidden;
 
@@ -87,7 +87,7 @@ body {
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
-        height: calc(100vh-125px);
+        height: calc(100vh - 125px);
         overflow-y: auto;
 
 
@@ -130,3 +130,5 @@ body {
     }
 
 }
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
